--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <a href="#nuestros-programas"> HISTORIA </a>
                 <a href="#caracteristicas"> LOGROS </a>
                 <a href="contacto.html"> Contacto </a>
-                <a href="index.html"> Home </a>
+                <a href="index.html"> HOME </a>
 
             </nav>
         </div>
