--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <a href="#somos-proya">¡ QUIEN ES !</a>
                 <a href="#nuestros-programas"> HISTORIA </a>
                 <a href="#caracteristicas"> LOGROS </a>
-                <a href="contacto.html"> Contacto </a>
+                <a href="contacto.html"> CONTACTO </a>
                 <a href="index.html"> HOME </a>
 
             </nav>
